--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "bootstrap": "^5.3.3",
     "i18n-js": "^4.5.1",
     "jquery": "^3.7.1",
+    "node-sass": "^9.0.0",
+    "postcss-loader": "3",
+    "sass-loader": "10",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
@@ -19,5 +22,8 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
