--- a/config/database.yml
+++ b/config/database.yml
@@ -8,10 +8,10 @@ default: &default
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  url: <%= ENV['DATABASE_URL'] %>
 
 development:
   <<: *default
+  username: postgres
   database: test_guru_development
 
 # Warning: The database defined as "test" will be erased and
@@ -19,8 +19,10 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  username: postgres
   database: test_guru_test
 
 production:
   <<: *default
-  database: test_guru_production
+  url: <%= ENV['DATABASE_URL'] %>
+  
